pielang/src/snapshots/pielang__test__parse_expression_01.snap
---
source: pielang/src/test.rs
description: "01"
expression: parser.parse(e)
---
Ok(
    NatLit(
        Span(
            0,
            2,
        ),
        1,
    ),
)
