pielang/src/snapshots/pielang__test__parse_expression_1.snap
---
source: pielang/src/test.rs
description: "1"
expression: parser.parse(e)
---
Ok(
    NatLit(
        Span(
            0,
            1,
        ),
        1,
    ),
)
