pielang/src/snapshots/pielang__test__parse_expression_9876.snap
---
source: pielang/src/test.rs
description: "9876"
expression: parser.parse(e)
---
Ok(
    NatLit(
        Span(
            0,
            4,
        ),
        9876,
    ),
)
