pielang/src/snapshots/pielang__test__parse_expression_nil.snap
---
source: pielang/src/test.rs
description: nil
expression: parser.parse(e)
---
Ok(
    Ident(
        Span(
            0,
            3,
        ),
        "nil",
    ),
)
