pielang/src/snapshots/pielang__test__parse_expression_{the Nat 1}.snap
---
source: pielang/src/test.rs
description: "{the Nat 1}"
expression: parser.parse(e)
---
Ok(
    AppExpr(
        Span(
            0,
            11,
        ),
        [
            Ident(
                Span(
                    1,
                    4,
                ),
                "the",
            ),
            Ident(
                Span(
                    5,
                    8,
                ),
                "Nat",
            ),
            NatLit(
                Span(
                    9,
                    10,
                ),
                1,
            ),
        ],
    ),
)
