pielang/src/snapshots/pielang__test__pi_sigma_scope_(Pi ((A U)(D U)) (Pair A D)).snap
---
source: pielang/src/test.rs
description: (Pi ((A U)(D U)) (Pair A D))
expression: output
---
type: (U 1)
expr: (Π ((A U)(D U)) (Pair A D))
