pielang/src/snapshots/pielang__test__tll_1_(-> U U).snap
---
source: pielang/src/test.rs
description: (-> U U)
expression: output
---
type: (U 1)
expr: (→ U U)
