pielang/src/snapshots/pielang__test__tll_1_(Pair Atom U).snap
---
source: pielang/src/test.rs
description: (Pair Atom U)
expression: output
---
type: (U 1)
expr: (Pair Atom U)
