pielang/src/snapshots/pielang__test__tll_1_(Pair U U).snap
---
source: pielang/src/test.rs
description: (Pair U U)
expression: output
---
type: (U 1)
expr: (Pair U U)
